# core

./: .gitignore  .mailmap  AUTHORS  COPYING  ChangeLog  ChangeLog.Nova  INSTALL  INSTALLATION.TXT  LICENSE  Makefile.am  Release Notes CFEngine 3 Enterprise.txt  Release_Notes_CFEngine_3_Enterprise.txt  UPGRADE.TXT  Upgrading.Nova  branch-tracking  config.m4  configure.ac  http-nginx.conf  options.m4  output.m4  serve-cfmod.sh  serve-http.sh  serve-mongo.sh  spp.php
GUI/: Cfeditor.php  Makefile.am  allhosts.php  body.php  bswa.php  bundle.php  bundles.php  cdp.php  classes.php  comments.php  communications.php  editor.php  footer.php  formulate.php  header.php  helm.php  host.php  hosts.html  hosts.php  index.html  index.php  intentions.php  jquery.fancybox-1.3.1.css  knowledge.php  license.php  new_topic.php  notkept.php  nova.css  promise.php  promises.php  search.php  services.php  showexample.php  spp.php  status.html  status.php  testpage.php  topN.php  views.php  vitaldetails.php  (+1 more)
GUI/css/: 960.css  cfcolors.css  style.css
GUI/images/: Makefile.am
GUI/img/: Makefile.am
GUI/pdf_report/: data4.txt  index.php  makepdf.php
GUI/policies/: active_directory.cf  failsafe.cf  file_change.cf
GUI/policy/: Untitled-7.js  checksyntax.php  compare_file_contents.php  empty_directory.php  encrypt.php  get_file_contents.php  get_list.php  save_file_contents.php  svnmodule.php
GUI/scripts/: cfeditor.js  jquery-ui-1.8.2.custom.min.js  sortingtables.js
GUI2/: .htaccess  Apache-htaccess  Cfeditor.php  Makefile.am  README  bundle.php  disabled.html  editor.php  emailpdf.php  hosts.php  index.php  jCryption-1.1.php  promise.php  promises.php  services.php  showexample.php  status.php  topN.php  unit_test.php  unittest_index.php  views.php
GUI2/GUI/: Cfeditor.php  Makefile.am  body.php  bundle.php  bundles.php  cdp.php  classes.php  emailpdf.php  helm.php  hosts.php  index.php  knowledge.php  license.php  promise.php  promises.php  search.php  services.php  showexample.php  status.php  topN.php  vitaldetails.php  vitals.php
GUI2/JSUnit/: swarminject.js  testsuite.js
GUI2/css/: jquery-ui-1.8.2.custom.css  jquery.fancybox-1.3.1.css  style.css
GUI2/docs/: CfengineStdLibrary.html  Makefile  README  cf-Filters.html  cf-Modularize.html  cf-Packages.html  cf-QuickRef.html  cf-QuickRef3.html  cf-anomaly.html  cf-begin-linux.html  cf-begin-windows.html  cf-copernicus.html  cf-enterprise.html  cf-remotecomm.html  cf3-bestpractice.html  cf3-glossary.html  cf3-reference.html  cf3-solutions.html  cf3-tutorial.html  cf3-upgrade.html  cfengine-Anomalies.html  cfengine.ltm  (+86 more)
api/: Makefile.am  api-host.c  api-php.c  api-php.h  api-promise.c  api-query.c  api-role.c  api-settings.c  api-user.c  api.c  api.h  db-serialize.c  db-serialize.h  mongo-initialize.js  utils.c  utils.h
cf-hub/: Makefile.am  cf-hub-maintenance.c  cf-hub-scheduled-reports.c  cf-hub-scheduled-reports.h  cf-hub-worker.c  cf-hub.c  cf-hub.h
cf-know/: Makefile.am  cf-know.c  knowledge.c  knowledge.h
cfmod/: Makefile.am  cfmod-php-fpm.conf  cfmod.c  common.c  common.h  php_cfmod.h  private-api-constellation.c  private-api-constellation.h  private-api.c  private-api.h  public-api.c  public-api.h
disphelper/: Makefile.am  win_disphelper.c
docs/: ArchiveEnterprise-2-2-OwnersManual.texinfo  Enterprise-3-0-API.texinfo  Enterprise-3-0-OwnersManual.texinfo  Enterprise-OwnersManual.texinfo  Makefile.am  NovaGetStarted.texinfo  Release_notes_CFEngine_3_Nova.txt  cf-nova-gui.texinfo  cfnova.texinfo  how-to-enterprise-3-0-call-collect.texinfo  texinfo-logo.tex
knowledge/: .gitignore  CfengineStdLibrary.html  Enterprise-2-2-OwnersManual.html  Makefile  Makefile.am  Makefile.in  NovaOwnersManual.html  README  cf-QuickRef3.html  cf-copernicus.html  cf3-bestpractice.html  cf3-conceptguide.html  cf3-glossary.html  cf3-quickstart.html  cf3-reference.html  cf3-solutions.html  cf3-tutorial.html  cf3-upgrade.html  cf_associations.cf  cf_enterprise.css  cf_system.cf  cfnova.html  check_km_substrings.c  company_knowledge.cf  enterprise_build.cf  enterprise_control.cf  enterprise_control_mobile.cf  enterprise_knowledge.cf  enterprise_run.cf  enterprise_run_mobile.cf  error_topics.cf  examples.cf  goals.cf  hand_cf_enterprise.css  highlight_syntax.c  index.org  index.php  knowledge.cf  knowledge_models.cf  mobile.php  (+85 more)
libcfagent/: Makefile.am  acl_nt.c  agent_reports.c  agent_reports.h  processes.c  services.c  win_services.c  win_wmi.c
libcfexecd/: Makefile.am  win_service_exec.c
libcfmonitord/: Makefile.am  history.c  history.h  mon_io_linux.c  mon_mem_linux.c  mon_mem_solaris.c  probes.c  shared_kstat.c
libcfnova/: Makefile.am  bson_hub_conversion.c  bson_hub_conversion.h  bson_lib.c  bson_lib.h  cf.events.mc  cf.nova.h  cf.nova.web_api.h  cfnova.c  client_code.c  conversion.c  datapack.h  datapackaging.c  dataunpack.c  db_common.c  db_common.h  db_diagnostics.c  db_diagnostics.h  db_export_csv.c  db_export_csv.h  db_maintain.c  db_maintain.h  db_query.c  db_query.h  db_save.c  db_save.h  file_cache.c  hub_diagnostics.c  hub_diagnostics.h  install.c  install.h  ldap_lib.c  ldap_lib.h  ldap_lib_stubs.c  license.c  license.h  log.c  log.h  log_syslog.c  log_win.c  (+40 more)
libcfreport/: Makefile.am  cmd_api.c  cmd_api.h  nova_reports.c  nova_reports.h  stubs.c  syntax.c
libcfrunagent/: Makefile.am  runagent.c  runagent.h  stub.c
libcfserverd/: Makefile.am  server.c
misc/: Makefile.am
pub/: Makefile.am  getopt.h
sqlite3/: Makefile.am  sqlite3_functions.c  sqlite3_functions.h
src/: Makefile.am  acl.c  acl_linux.c  acl_nt.c  aggregation.c  benchmark.c  benchmark.h  bool.h  bson_hub_conversion.c  bson_hub_conversion.h  bson_lib.c  bson_lib.h  cf-hub-maintenance.c  cf-hub-scheduled-reports.c  cf-hub-worker.c  cf-know.c  cf-serverd.c  cf.defs.h  cf.events.h  cf.events.mc  cf.extern.h  cf.nova.cmd_api.h  cf.nova.h  cf.nova.web_api.h  cf3.defs.h  cf3.extern.h  cf3.server.h  cfcore.c  cfnova.c  client_code.c  cmd_api.c  compiler.h  conf.h  conf.h.in  conversion.c  coordinates.c  copernicus.c  database.c  datapack.h  datapackaging.c  (+114 more)
(+3147 files in other folders)
