
# Included from core/docs/guides/Makefile

COMMON_GUIDES += \
    ../../nova/docs/Licensing \
    ../../nova/docs/NovaEvaluationGuide \
    ../../nova/docs/NovaEvaluationGuideSupplement \
    ../../nova/docs/Enterprise-3-0-OwnersManual \
    ../../nova/docs/Enterprise-3-0-GetStarted \
    ../../nova/docs/UpgradingCfengineNova \
    ../../nova/docs/cf3-constellation-mission-obs

PDF_ONLY_GUIDES += \
    ../../nova/docs/cf3-nova-mission-portal \
    ../../nova/docs/cf3-nova-2-1-supplement
