docdir = @docdir@
knowledgedir = $(docdir)/knowledge
knowledge_DATA = README  cf_enterprise.css enterprise_knowledge.cf index.php navbar.html pattern.png enterprise_build.cf enterprise_run.cf KnowledgeBanner.png  nova-back.png promise_knowledge.cf enterprise_control.cf knowledge_models.cf README knowledge.cf index.php

EXTRA_DIST = README  cf_enterprise.css enterprise_knowledge.cf index.php navbar.html pattern.png enterprise_build.cf enterprise_run.cf KnowledgeBanner.png  nova-back.png promise_knowledge.cf enterprise_control.cf knowledge_models.cf README knowledge.cf index.php

MAINTAINERCLEANFILES = Makefile.in mdate-sh
