docdir = @docdir@

knowledgedir = $(docdir)/knowledge
knowledge_DATA = cf_enterprise.css enterprise_knowledge.cf navbar.html enterprise_build.cf enterprise_run.cf promise_knowledge.cf enterprise_control.cf knowledge_models.cf company_knowledge.cf README knowledge.cf index.php

EXTRA_DIST = README  cf_enterprise.css enterprise_knowledge.cf index.php navbar.html enterprise_build.cf enterprise_run.cf promise_knowledge.cf enterprise_control.cf knowledge_models.cf README company_knowledge.cf knowledge.cf index.php which.php

MAINTAINERCLEANFILES = Makefile.in mdate-sh
